--- a/testimonial.html
+++ b/testimonial.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                     <div class="testimonial-item bg-light rounded p-5">
-                        <p class="fs-5">Superb school for hostlers and day schoolrs in dharmavaram town.</p>
+                        <p class="fs-5">Superb school for hostlers and day scholars in dharmavaram town.</p>
                         <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                           <!-- <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial.jpg" style="width: 90px; height: 90px;">--> 
                             <div class="ps-3">
