--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="owl-carousel-item position-relative">
-                    <img class="img-fluid" src="img/RR PCMR-Students group(2).jpg"height="2268px" alt="">
+                    <img class="img-fluid" src="img\RR PCMR new pics\sel pics\Republic Day3.jpg"height="2268px" alt="">
                     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .2);">
                         <div class="container">
                             <div class="row justify-content-start">
