--- a/pages-gallery1.html
+++ b/pages-gallery1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>RupaRaja's PCMR</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
         <meta content="" name="keywords">
         <meta content="" name="description">
     
@@ -83,20 +83,21 @@
             </div>
             <!-- Page Header End -->
             <div class="gallery">
+                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_101113173.MP.jpg"width="360px" height="300px"/> 
+                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_101141762.jpg"width="360px" height="300px"/> 
+                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_101147547.jpg"width="360px" height="300px"/> 
                 <embed src="img/RR PCMR-Annual Day.jpg"width="360px" height="300px"/>
                 <embed src="img/INDEPENDENCE DAY.jpg"width="360px" height="300px"/> 
                 <embed src="img/RR PCMR-Harsha Sir with kids.jpg"width="360px" height="300px"/> 
                 <embed src="img/RR PCMR-Students group.jpg"width="360px" height="300px"/> 
                 <embed src="img/RR PCMR-Students group1.jpg"width="360px" height="300px"/> 
                 <embed src="img/RR PCMR-Walk-a-through.jpg"width="360px" height="300px"/> 
-                <embed src="img/school jee view.jpg"width="360px" height="300px"/> 
-                <embed src="img/school lunch area.jpg"width="360px" height="300px"/> 
-                <embed src="img/School pic1.jpg"width="360px" height="300px"/> 
-                <embed src="img/school walk-a-through.jpg"width="360px" height="300px"/> 
-                <embed src="img/Sports trophy.jpg"width="360px" height="300px"/> 
-                <embed src="img/RR PCMR-BUS STOP.jpg"width="360px" height="300px"/> 
+                 
             </div> 
 
+
+            <h4><center><a href="pages-gallery.html" style="color: mediumaquamarine;">Previous</a>  <a href="pages-gallery2.html" style="color: mediumaquamarine;">Next</a></center><h4>
+                <h4 style="color:chocolate;"><center>Click Here :<a href="https://youtu.be/O4GfhgG1yOM"> Sankranti Celebrations Video</a></center><h4>
 
 
               <!-- Footer Start -->
