Update index.html (facilities)

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>RupaRaja's PCMR</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
     <link href="img/RR-PCMR-Logo.ico" rel="icon">
 
-   
     
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -81,8 +80,8 @@
                                 <div class="col-10 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">RupaRaja's PCMR </h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Best School For Your Child.</p>
-                                    <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Learn More</a>
-                                    <a href="" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Our Classes</a>
+                                    <a href="about.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Learn More</a>
+                                    <a href="classes.html" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Our Classes</a>
                                 </div>
                             </div>
                         </div>
@@ -156,7 +155,7 @@
                                 <span class="bg-primary"></span>
                             </div>
                             <div class="facility-text bg-primary">
-                                <h3 class="text-primary mb-3">School Bus</h3>
+                                <h3 class="text-primary mb-3"><a href="pages-gallery.html#School Bus">School Bus</a></h3>
                                 <p class="mb-0"></p>
                             </div>
                         </div>
@@ -169,7 +168,7 @@
                                 <span class="bg-success"></span>
                             </div>
                             <div class="facility-text bg-success">
-                                <h3 class="text-success mb-3">Playground</h3>
+                                <h3 class="text-success mb-3"><a href="pages-gallery.html#PlayGround">Playground</a></h3>
                                 <p class="mb-0"></p>
                             </div>
                         </div>
@@ -182,7 +181,7 @@
                                 <span class="bg-warning"></span>
                             </div>
                             <div class="facility-text bg-warning">
-                                <h3 class="text-warning mb-3">Healthy Canteen</h3>
+                                <h3 class="text-warning mb-3"><a href="pages-gallery1.html#Our Campus">Huge Campus</a></h3>
                                 <p class="mb-0"></p>
                             </div>
                         </div>
@@ -195,7 +194,7 @@
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
-                                <h3 class="text-info mb-3">Positive Learning</h3>
+                                <h3 class="text-info mb-3"><a href="">Positive Learning</a></h3>
                                 <p class="mb-0"></p>
                             </div>
                         </div>
@@ -346,7 +345,7 @@
 
 
         <!-- Team Start -->
-       <div class="container-xxl py-5">
+        <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Founders</h1>
