--- a/pages-gallery.html
+++ b/pages-gallery.html
@@ -57,10 +57,10 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 rounded-bottom border-0 m-0">
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="pages-gallery.html" class="dropdown-item">Gallery</a>
+                                <a href="pages-gallery.html" class="dropdown-item active">Gallery</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
                     <a href="contact.html" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
                 </div>
@@ -83,17 +83,27 @@
             </div>
             <!-- Page Header End -->
             <div class="gallery">
+                <section id="Republic day-24">
+                <h4>Republic Day-2024</h4>
                 <embed src="img\RR PCMR new pics\sel pics\Republic Day.jpg"width="360px" height="300px"/>
                 <embed src="img\RR PCMR new pics\sel pics\Republic Day1.jpg"width="360px" height="300px"/>
                 <embed src="img\RR PCMR new pics\sel pics\Republic Day2.jpg"width="360px" height="300px"/>
+                </section>
 
+                <section id="PlayGround">
+                    <h4>PlayGround</h4>
+                <embed src="img\School pic3 resize.jpg"width="360px" height="300px"/> 
                 <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094236958.MP.jpg"width="360px" height="300px"/>
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094245173.jpg"width="360px" height="300px"/> 
+                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094245173.jpg"width="360px" height="300px"/>  
+                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_101113173.MP.jpg"width="360px" height="300px"/> 
+                </section>
+
+                <section id="School Bus">
+                    <h4>School Bus</h4>
                 <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094255943.jpg"width="360px" height="300px"/> 
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094322896.jpg"width="360px" height="300px"/> 
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_095317766.jpg"width="360px" height="300px"/> 
-                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_095508436.jpg"width="360px" height="300px"/> 
-                
+                <embed src="img\RR PCMR new pics\sel pics\PXL_20231211_094322896.jpg"width="360px" height="300px"/>
+                <embed src="img/RR PCMR-BUS STOP.jpg"width="360px" height="300px"/>
+                </section>
             </div> 
             <center>
             <h4><a href="pages-gallery1.html" style="color: mediumaquamarine;">Next</a><h4>
