--- a/pages-gallery2.html
+++ b/pages-gallery2.html
@@ -57,7 +57,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 rounded-bottom border-0 m-0">
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="pages-gallery.html" class="dropdown-item">Gallery</a>
+                                <a href="pages-gallery.html" class="dropdown-item active">Gallery</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
@@ -76,23 +76,26 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Gallery-3</li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Gallery-2</li>
                         </ol>
                     </nav>
                 </div>
             </div>
             <!-- Page Header End -->
             <div class="gallery">
-                <embed src="img/school jee view.jpg"width="360px" height="300px"/> 
-                <embed src="img/school lunch area.jpg"width="360px" height="300px"/> 
-                <embed src="img/School pic1.jpg"width="360px" height="300px"/>
-                <embed src="img/school walk-a-through.jpg"width="360px" height="300px"/> 
+                <section id="Older Gallery">
+                    <h4>Older Gallery</h4>
+                <embed src="img/RR PCMR-Annual Day.jpg"width="360px" height="300px"/>
+                <embed src="img/INDEPENDENCE DAY.jpg"width="360px" height="300px"/> 
+                <embed src="img/RR PCMR-Harsha Sir with kids.jpg"width="360px" height="300px"/> 
+                <embed src="img/RR PCMR-Students group.jpg"width="360px" height="300px"/> 
+                <embed src="img/RR PCMR-Students group1.jpg"width="360px" height="300px"/>  
                 <embed src="img/Sports trophy.jpg"width="360px" height="300px"/> 
-                <embed src="img/RR PCMR-BUS STOP.jpg"width="360px" height="300px"/> 
+                </section>
             </div> 
 
 
-            <h4><center><a href="pages-gallery.html"style="color: mediumaquamarine;">Previous</a>  <a href="pages-gallery2.html"style="color: mediumaquamarine;"></a></center><h4>
+            <h4><center><a href="pages-gallery1.html"style="color: mediumaquamarine;">Previous</a>  <a href="pages-gallery2.html"style="color: mediumaquamarine;"></a></center><h4>
                 <h4 style="color:chocolate;"><center>Click Here :<a href="https://youtu.be/O4GfhgG1yOM"> Sankranti Celebrations Video</a></center><h4>
               <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
