--- a/testimonial.html
+++ b/testimonial.html
@@ -59,7 +59,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 m-0">
-                            <a href="testimonial.html" class="dropdown-item">Testimonials</a>
+                            <a href="testimonial.html" class="dropdown-item active">Testimonials</a>
                             <a href="pages-gallery.html" class="dropdown-item">Gallery</a>
                         </div>
                     </div>
