--- a/pages-gallery2.html
+++ b/pages-gallery2.html
@@ -60,7 +60,7 @@
                                 <a href="pages-gallery.html" class="dropdown-item active">Gallery</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
+                        <a href="contact.html" class="nav-item nav-link ">Contact Us</a>
                     </div>
                     <a href="contact.html" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
                 </div>
