--- a/classes.html
+++ b/classes.html
@@ -114,7 +114,7 @@
                         </div>
                     </div>
 
-                    <h4>We allow students to apply their knowledge practicaly through labs </h4>
+                    <h4>We allow students to apply their knowledge practically through labs </h4>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
@@ -126,7 +126,7 @@
                         </div>
                     </div> 
                 <center>
-                    <h4>Our curriculum includes not only academics but there are other elements which help nuture a child with various things like: </h4>
+                    <h4>Our curriculum includes not only academics but there are other elements which help nurture a child with various things like: </h4>
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
