--- a/classes.html
+++ b/classes.html
@@ -126,7 +126,7 @@
                         </div>
                     </div> 
                 <center>
-                    <h4>Our curriculum includes not only academics but there are other elements which help nurture a child with various things like: </h4>
+                    <h4>Our curriculum includes not just academics but there are other elements that help nurture a child like: </h4>
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
