--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="classes-item">
                     <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                        <img class="img-fluid rounded-circle" src="img/RR PCMR new pics/Hari R.jpg" alt="">
+                        <img class="img-fluid rounded-circle" src="img/Hari R.jpg" alt="">
                     </div>
                     <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
                         <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa Harinath</p><h6>Chairman</h6></a>
