--- a/classes.html
+++ b/classes.html
@@ -107,7 +107,7 @@
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
                                 <a class="d-block text-center h3 mt-3 mb-4" ><h2>Our education program consists of three levels:</h2>
-                                <ul><li>Pre Primary</li>
+                                <ul style="list-style: none;"><li>Pre Primary</li>
                                     <li>Primary</li>
                                     <li>Higher</li></ul></a>
                             </div>
