--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                     <img class="img-fluid rounded-circle" src="img/Jagan R.jpg" alt="">
                 </div>
                 <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
-                    <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa Jagadeesh</p><h6>CEO</h6></a>
+                    <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Dr. Rupa Jagadeesh</p><h6>CEO</h6></a>
                 </div>
             </div>
         </div> 
