--- a/pages-gallery3.html
+++ b/pages-gallery3.html
@@ -96,7 +96,7 @@
 
 
             <h4><center><a href="pages-gallery2.html"style="color: mediumaquamarine;">Previous</a>  <a href="pages-gallery2.html"style="color: mediumaquamarine;"></a></center><h4>
-                <h4 style="color:chocolate;"><center>Click Here :<a href="https://youtu.be/O4GfhgG1yOM"> Sankranti Celebrations Video</a></center><h4>
+                <h4 style="color:chocolate;"><center>Click Here :<a href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing"> Sankranti Celebrations Video</a></center><h4>
               <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
          
