--- a/pages-gallery1.html
+++ b/pages-gallery1.html
@@ -106,7 +106,7 @@
 
 
             <h4><center><a href="pages-gallery.html" style="color: mediumaquamarine;">Previous</a>  <a href="pages-gallery2.html" style="color: mediumaquamarine;">Next</a></center><h4>
-                <h4 style="color:chocolate;"><center>Click Here :<a href="https://youtu.be/O4GfhgG1yOM"> Sankranti Celebrations Video</a></center><h4>
+                <h4 style="color:chocolate;"><center>Click Here :<a href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing"> Sankranti Celebrations Video</a></center><h4>
 
 
               <!-- Footer Start -->
