--- a/pages-gallery.html
+++ b/pages-gallery.html
@@ -107,8 +107,8 @@
             </div> 
             <center>
             <h4><a href="pages-gallery1.html" style="color: mediumaquamarine;">Next</a><h4>
-            <h4 style="color:chocolate;">Click Here :<a href="https://youtu.be/O4GfhgG1yOM"> Sankranti Celebrations Video</a><h4>
-               
+            <h4 style="color:chocolate;">Click Here :<a href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing"> Sankranti Celebrations Video</a><h4>
+               <!-- Youtube link : https://youtu.be/O4GfhgG1yOM -->
             </center>
               <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
