--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
-                                <h3 class="text-info mb-3"><a href="">Positive Learning</a></h3>
+                                <h3 class="text-info mb-3"><a href="pages-gallery2.html#Positive Learning">Positive Learning</a></h3>
                                 <p class="mb-0"></p>
                             </div>
                         </div>
@@ -204,7 +204,24 @@
         </div>
         <!-- Facilities End -->
 
-
+        <!-- Knowledge Partner -->
+        <br/>
+       
+        <center>
+            <h2 style="color: coral;">Powered by Cambridge</h2>
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="classes-item">
+                <div class="bg-light rounded w-100 mx-auto p-6">
+                    <img class="img-fluid rounded-sqaure" src="img/Cambridge.jpg" alt="Cambridge" width="100%%">
+                </div>
+                <br/>
+                <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
+                    <a class="d-block text-center h3 mt-3 mb-4" ><h3>Our Knowledge Partner</h3>
+                    
+                </div>
+            </div>
+        </div>
+    </center>
         <!-- About Start -->
         <div class="container-xxl py-5">
             <div class="container">
@@ -389,7 +406,7 @@
                     <img class="img-fluid rounded-circle" src="img/Jagan R.jpg" alt="">
                 </div>
                 <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
-                    <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Dr. Rupa Jagadeesh</p><h6>CEO</h6></a>
+                    <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa Jagadeesh</p><h6>CEO</h6></a>
                 </div>
             </div>
         </div> 
@@ -458,7 +475,7 @@
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded p-5">
-                        <p class="fs-5"> <br/>                                           My best school ever.</p>
+                        <p class="fs-5">My best school ever.</p><br/>
                         <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                             <!--<img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial.jpg" style="width: 90px; height: 90px;">-->
                             <div class="ps-3">
@@ -469,7 +486,7 @@
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded p-5">
-                        <p class="fs-5">   <br/>                                         Teaching super and food also super</p>
+                        <p class="fs-5">Teaching super and food also super</p><br/>
                         <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
                           <!--  <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial.jpg" style="width: 90px; height: 90px;">-->
                             <div class="ps-3">
