All Founder images altered to 360 *480

--- a/about.html
+++ b/about.html
@@ -150,47 +150,47 @@
                     <p></p>
                 </div>
          
-        <div class="row g-4">
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="classes-item">
-                    <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                        <img class="img-fluid rounded-circle" src="img/RRaja copy.jpg" alt="" >
-                    </div>
-                    <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
-                        <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa RajaKrishna</p><h6>Treasurer</h6></a>
-                    </div>
+         <div class="row g-4">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="classes-item">
+                <div class="bg-light rounded-circle w-75 mx-auto p-3">
+                    <img class="img-fluid rounded-circle" src="img/RRaja copy 360 X 480.jpg" alt="" >
+                </div>
+                <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
+                    <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa RajaKrishna</p><h6>Treasurer</h6></a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="classes-item">
-                    <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                        <img class="img-fluid rounded-circle" src="img/Hari R.jpg" alt="">
-                    </div>
-                    <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
-                        <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa Harinath</p><h6>Chairman</h6></a>
-                    </div>
+        </div>
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="classes-item">
+                <div class="bg-light rounded-circle w-75 mx-auto p-3">
+                    <img class="img-fluid rounded-circle" src="img/Hari R 360 X 480.jpg" alt="">
+                </div>
+                <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
+                    <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa Harinath</p><h6>Chairman</h6></a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="classes-item">
-                    <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                        <img class="img-fluid rounded-circle" src="img/Harsha R.jpg" alt="">
-                    </div>
-                    <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
-                        <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa Harsha Vardhan</p><h6>CEO</h6></a>
-                    </div>
+        </div>
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="classes-item">
+                <div class="bg-light rounded-circle w-75 mx-auto p-3">
+                    <img class="img-fluid rounded-circle" src="img/Harsha R 360 X 480.jpg" alt="">
+                </div>
+                <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
+                    <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa Harsha Vardhan</p><h6>CEO</h6></a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="classes-item">
-                    <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                        <img class="img-fluid rounded-circle" src="img/Jagan R.jpg" alt="">
-                    </div>
-                    <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
-                        <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Dr.Rupa Jagadeesh</p><h6>CEO</h6></a>
-                    </div>
+        </div>
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="classes-item">
+                <div class="bg-light rounded-circle w-75 mx-auto p-3">
+                    <img class="img-fluid rounded-circle" src="img/Jagan R 360 X 480.jpg" alt="">
                 </div>
-            </div> 
+                <div class="bg-light rounded-circle p-4 pt-5 mt-n5">
+                    <a class="d-block rounded-circle text-center h3 mt-3 mb-4" ><p>Rupa Jagadeesh</p><h6>CEO</h6></a>
+                </div>
+            </div>
+        </div> 
             
             <center>
             <h1 style="color: coral;">Our Pillars</h1>
