--- a/about.html
+++ b/about.html
@@ -328,6 +328,9 @@
                         <a class="btn btn-link text-white-50" href="pages-gallery.html">Gallery</a>
 
                     </div>  
+		    <div class="col-lg-3 col-md-6">
+                        <img src="img/RR-PCMR-Logo.ico" height="100%" width="100%"  alt="Logo">
+                    </div>  
                 </div>
          
 
