--- a/classes.html
+++ b/classes.html
@@ -128,7 +128,7 @@
                 <center>
                     <h4>Our curriculum includes not just academics but there are other elements that help nurture a child like: </h4>
                 <div class="row g-4">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                   <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
                                 <img class="img-fluid rounded-circle" src="img/classes-1.jpg" alt="">
@@ -164,7 +164,17 @@
                                 <img class="img-fluid rounded-circle" src="img/GK.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" >General Knowledge</a>
+                                <a class="d-block text-center h3 mt-3 mb-4">General Knowledge</a>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="classes-item">
+                            <div class="bg-light rounded-circle w-75 mx-auto p-3">
+                                <img class="img-fluid rounded-circle" src="img/Labs.jpg" alt="">
+                            </div>
+                            <div class="bg-light rounded p-4 pt-5 mt-n5">
+                                <a class="d-block text-center h3 mt-3 mb-4">Labs</a>
                             </div>
                         </div>
                     </div> 
@@ -173,8 +183,8 @@
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
                                 <img class="img-fluid rounded-circle" src="img/jee exam.jpg" alt="">
                             </div>
-                            <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" >Prep for higher education like JEE exams.</a>
+                            <div class="bg-light rounded p-2 pt-5 mt-n5">
+                                <a class="d-block text-center h4 mt-3 mb-4" >JEE examination Prep</a>
                                 <div class="d-flex align-items-center justify-content-between mb-4">   
                             </div>
                         </div>
