--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
                                 <img class="img-fluid rounded-circle" src="img/jee exam.jpg" alt="">
                             </div>
-                            <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" ><h4>Prep for higher education like JEE exams.</h4></a>
+                            <div class="bg-light rounded p-2 pt-5 mt-n5">
+                                <a class="d-block text-center h4 mt-3 mb-4" >JEE examination Prep</a>
                                 <div class="d-flex align-items-center justify-content-between mb-4">   
                             </div>
                         </div>
