--- a/pages-gallery2.html
+++ b/pages-gallery2.html
@@ -107,7 +107,7 @@
             <h4><center><a href="pages-gallery1.html"style="color: mediumaquamarine;">Previous</a>  <a href="pages-gallery3.html" style="color: mediumaquamarine;">Next</a></center><h4>
                 <h4 style="color:chocolate;"><center>Click Here :<a href="https://drive.google.com/file/d/1KnduURB577ExPCKr23VQn2ATyroRUqZJ/view?usp=sharing"> Sankranti Celebrations Video</a></center><h4>
 
-              <!-- Footer Start -->
+                <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
          
             <div class="container py-5">
@@ -120,6 +120,8 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/ruparajaspcmr"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i class="fab fa-youtube"></i></a>
+                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/pcmrconceptschool12?igsh=bWJvY3NnajFoYTZ2"><i class="fab fa-instagram"></i></a>
+
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -128,9 +130,11 @@
                         <a class="btn btn-link text-white-50" href="contact.html">Contact Us <br/>(Working hours 9:00 to 4:00)</a>
                         <a class="btn btn-link text-white-50" href="pages-gallery.html">Gallery</a>
 
-                    </div>  
+                    </div> 
 			 <div class="col-lg-3 col-md-6">
-                        <img src="img/RR-PCMR-Logo.ico" height="100%" width="100%"  alt="Logo">
+                        <!-- <img src="img/RR-PCMR-Logo.ico" height="100%" width="100%"  alt="Logo"> -->
+                          <h3 class="text-white mb-4">Website Hits:</h3>
+                        <a href="https://www.freecounterstat.com" title="hit counter"><img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=kx99z23w2ceb5rhx4hcap4lehl2hhqdc" border="0" title="hit counter" alt="hit counter"></a>
                     </div>  
                 </div>
          
