Update index.html pcmr concept school title changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>RupaRaja's PCMR</title>
+    <title>RupaRaja's PCMR Concept School</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -574,3 +574,4 @@
 </body>
 
 </html>
+
