--- a/content.html
+++ b/content.html
@@ -37,12 +37,11 @@
 <body>
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
-        <div id="spinner"
-            class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <!-- <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
-        </div>
+        </div> -->
         <!-- Spinner End -->
 
 
@@ -62,7 +61,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 m-0">
-                            <a href="testimonial.html" class="dropdown-item active">Testimonials</a>
+                            <a href="content.html" class="dropdown-item active">Content</a>
                             <a href="pages-gallery.html" class="dropdown-item">Gallery</a>
                         </div>
                     </div>
@@ -78,12 +77,12 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Testimonials</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Content</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Testimonials</li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Content</li>
                     </ol>
                 </nav>
             </div>
@@ -95,49 +94,66 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Testimonials!</h1>
+                    <h1 class="mb-3">Content!</h1>
                     <p></p>
                 </div>
-                <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="testimonial-item bg-light rounded p-5">
-                        <p class="fs-5">Superb school for hostlers and day scholars in dharmavaram town.</p>
-                        <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
-                            <!-- <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial.jpg" style="width: 90px; height: 90px;">-->
-                            <div class="ps-3">
-                                <h3 class="mb-1">Pujari Tarun</h3>
-                                <span></span>
-                            </div>
-                            <i class="fa fa-quote-right fa-3x text-primary ms-auto d-none d-sm-flex"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-light rounded p-5">
-                        <p class="fs-5"> <br /> My best school ever.</p>
-                        <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
-                            <!--<img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial.jpg" style="width: 90px; height: 90px;">-->
-                            <div class="ps-3">
-                                <h3 class="mb-1">Jayapal Reddy</h3>
-                                <span></span>
-                            </div>
-                            <i class="fa fa-quote-right fa-3x text-primary ms-auto d-none d-sm-flex"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-light rounded p-5">
-                        <p class="fs-5"> <br /> Teaching super and food also super</p>
-                        <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
-                            <!--  <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial.jpg" style="width: 90px; height: 90px;">-->
-                            <div class="ps-3">
-                                <h3 class="mb-1">Ashok Kumar reddy</h3>
-                                <span></span>
-                            </div>
-                            <i class="fa fa-quote-right fa-3x text-primary ms-auto d-none d-sm-flex"></i>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
         <!-- Testimonial End -->
 
+        <div class="row g-4 justify-content-center">
+            <!-- Class 1-5 -->
+            <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="card h-100 border-0 shadow-sm p-4 text-center rounded-3 bg-light service-item">
+                    <div class="card-body">
+                        <div class="mb-4">
+                            <i class="fa fa-shapes fa-3x text-primary"></i>
+                        </div>
+                        <h3 class="mb-3 text-primary head-font">Primary</h3>
+                        <h5 class="mb-4 text-dark">Class 1 - 5</h5>
+                        <p class="text-muted mb-4">Foundation years focusing on basics of Mathematics, EVS, and Social
+                            Studies.</p>
+                        <a href="content1-5.html" class="btn btn-primary rounded-pill py-2 px-4">Explore Content <i
+                                class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
 
+            <!-- Class 6-8 -->
+            <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="card h-100 border-0 shadow-sm p-4 text-center rounded-3 bg-light service-item">
+                    <div class="card-body">
+                        <div class="mb-4">
+                            <i class="fa fa-book-open fa-3x text-primary"></i>
+                        </div>
+                        <h3 class="mb-3 text-primary head-font">Middle</h3>
+                        <h5 class="mb-4 text-dark">Class 6 - 8</h5>
+                        <p class="text-muted mb-4">Intermediate concepts in Science, Mathematics, and Social Sciences.
+                        </p>
+                        <a href="content6-8.html" class="btn btn-primary rounded-pill py-2 px-4">Explore Content <i
+                                class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Class 9-10 -->
+            <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="card h-100 border-0 shadow-sm p-4 text-center rounded-3 bg-light service-item">
+                    <div class="card-body">
+                        <div class="mb-4">
+                            <i class="fa fa-microscope fa-3x text-primary"></i>
+                        </div>
+                        <h3 class="mb-3 text-primary head-font">High School</h3>
+                        <h5 class="mb-4 text-dark">Class 9 - 10</h5>
+                        <p class="text-muted mb-4">Advanced curriculum preparing students for board exams and higher
+                            studies.</p>
+                        <a href="content9-10.html" class="btn btn-primary rounded-pill py-2 px-4">Explore Content <i
+                                class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
 
@@ -157,9 +173,8 @@
                                 href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
                                     class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social"
-                                href="https://www.instagram.com/pcmrconceptschool12?igsh=bWJvY3NnajFoYTZ2"><i
+                                href="https://www.youtube.com/@rr-pcmrconceptschool4426"><i
                                     class="fab fa-instagram"></i></a>
-
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -171,11 +186,7 @@
 
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <!-- <img src="img/RR-PCMR-Logo.ico" height="100%" width="100%"  alt="Logo"> -->
-                        <h3 class="text-white mb-4">Website Hits:</h3>
-                        <a href="https://www.freecounterstat.com" title="hit counter"><img
-                                src="https://counter1.optistats.ovh/private/freecounterstat.php?c=kx99z23w2ceb5rhx4hcap4lehl2hhqdc"
-                                border="0" title="hit counter" alt="hit counter"></a>
+                        <img src="img/RR-PCMR-Logo.ico" height="100%" width="100%" alt="Logo">
                     </div>
                 </div>
 
