--- a/classes.html
+++ b/classes.html
@@ -253,10 +253,10 @@
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3 text-gradient section-title">Competitive Foundation</h1>
-                    <p class="fs-5 text-primary">Building the pathway for IIT, JEE, and NEET success.</p>
+                    <p class="fs-5 text-primary">Building the pathway for IIT /JEE success.</p>
                 </div>
                 <div class="row g-4">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
                             <i class="fas fa-atom fa-3x text-primary mb-3" style="color: #FE5D37 !important;"></i>
                             <h4 class="mb-3">IIT/JEE Basics</h4>
@@ -264,16 +264,15 @@
                                 engineering entrance exams. Focus on advanced Mathematics and Physics concepts.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                            <i class="fas fa-dna fa-3x text-primary mb-3" style="color: #FE5D37 !important;"></i>
-                            <h4 class="mb-3">NEET Foundation</h4>
-                            <p class="mb-0">Specialized biology and chemistry modules designed to spark interest in
-                                medical
-                                sciences and prepare students for competitive medical entrance tests.</p>
+                            <i class="fas fa-lightbulb fa-3x text-primary mb-3" style="color: #FE5D37 !important;"></i>
+                            <h4 class="mb-3">Concept Mastery</h4>
+                            <p class="mb-0">Building strong conceptual foundations beyond rote memorization. We ensure
+                                students understand the 'why' and 'how' behind every topic.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
                             <i class="fas fa-brain fa-3x text-primary mb-3" style="color: #FE5D37 !important;"></i>
                             <h4 class="mb-3">Olympiad Prep</h4>
